<resources>
    <string name="app_name">Gelirken Al</string>
    <string name="add_to_list">Listeye Ekle</string>
    <string name="what_do_you_need">Ne lazım?</string>
    <string name="things_to_buy">ALINACAKLAR</string>
    <string name="remove_from_list">Listeden Sil</string>
    <string name="end_shopping">Alışverişi Bitir</string>
    <string name="quantity">Miktar</string>
    <string name="you_must_set_a_name_to_the_product">İsim girmelisiniz.</string>
    <string name="list_is_empty">Listeniz boş</string>
    <string name="default_notification_channel_id">default</string>
    <string name="do_you_want_to_change_your_list">Listenizi değiştirmek istiyor musunuz?</string>
    <string name="all_of_your_list_will_be_deleted">Kendi listenizdeki veriler silinecektir.</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
</resources>