<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.main.MainFragment">

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et"
        android:drawableLeft="@drawable/ic_twotone_add_circle_outline_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/ubuntu_medium"
        android:hint="@string/what_do_you_need"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toStartOf="@+id/etQuantity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et"
        android:fontFamily="@font/ubuntu_medium"
        android:hint="@string/quantity"
        android:maxLength="8"
        android:maxLines="1"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintEnd_toStartOf="@+id/btnAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etName"
        app:layout_constraintTop_toTopOf="parent" />

    <com.enesigneci.gelirkenal.ui.component.BorderedButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/nothing_you_could_do"
        android:gravity="center"
        android:text="@string/add_to_list"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etQuantity"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#F26430"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:text="@string/things_to_buy"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/rvList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list" />

    <com.enesigneci.gelirkenal.ui.component.BorderedButton
        android:id="@+id/btnEnd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:text="@string/end_shopping"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/ad_id"
        app:layout_constraintBottom_toTopOf="@+id/btnEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/empty_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_is_empty"
        app:drawableTopCompat="@drawable/ic_baseline_error_outline_24"
        app:layout_constraintBottom_toBottomOf="@+id/rvList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/rvList"
        app:layout_constraintTop_toTopOf="@+id/rvList" />

</androidx.constraintlayout.widget.ConstraintLayout>